--- a/MyApp/SwiftDemo/Base.lproj/Main.storyboard
+++ b/MyApp/SwiftDemo/Base.lproj/Main.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -32,7 +34,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AppListCell" id="GNx-Od-9B3" customClass="AppListCell" customModule="SwiftDemo" customModuleProvider="target">
-                                        <rect key="frame" x="48.5" y="0.0" width="278" height="173"/>
+                                        <rect key="frame" x="49" y="0.0" width="278" height="173"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="278" height="173"/>
@@ -69,7 +71,7 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BannerCell" id="k4o-1X-3s3">
-                                        <rect key="frame" x="79.5" y="183" width="216" height="133"/>
+                                        <rect key="frame" x="80" y="183" width="216" height="133"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="216" height="133"/>
@@ -95,11 +97,125 @@
                     <navigationItem key="navigationItem" id="BcY-Qm-U9m"/>
                     <connections>
                         <outlet property="collectionView" destination="98Q-Gf-rd7" id="1nb-gb-2A0"/>
+                        <segue destination="4U4-4g-bvX" kind="show" identifier="QRSegue" id="Wh9-Pb-EvY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="93.599999999999994" y="-994.45277361319347"/>
+            <point key="canvasLocation" x="100" y="-994"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="IiX-ag-Cpf">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="4U4-4g-bvX" customClass="QRViewController" customModule="SwiftDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g7X-6F-VaT"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hsz-up-o1R"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="q91-OI-JTL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="请输入要转化的文字" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="7qx-vM-MbV">
+                                <rect key="frame" x="16" y="66" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="51r-Mm-PWY"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VU9-OX-1Qm">
+                                <rect key="frame" x="239" y="111" width="120" height="60"/>
+                                <color key="backgroundColor" red="0.83514175440000005" green="0.89560592169999997" blue="0.1951411367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="Kye-Zv-iSj"/>
+                                    <constraint firstAttribute="height" constant="60" id="jeR-ah-iyp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="生成">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.69802473009999999" green="1" blue="0.97275099210000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createBtnClick:" destination="4U4-4g-bvX" eventType="touchUpInside" id="5Cf-nJ-0iF"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="kEc-9M-o6A">
+                                <rect key="frame" x="10" y="182" width="355" height="355"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="kEc-9M-o6A" secondAttribute="height" id="Rhc-Yh-NLj"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vAV-qA-0EM">
+                                <rect key="frame" x="50" y="597" width="275" height="50"/>
+                                <color key="backgroundColor" red="0.20784313730000001" green="0.67843137249999996" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="e25-Ox-v71"/>
+                                </constraints>
+                                <state key="normal" title="识别">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="recognizeQRCode:" destination="4U4-4g-bvX" eventType="touchUpInside" id="WCd-gn-vFl"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请选择logo" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XdO-pr-WTQ">
+                                <rect key="frame" x="16" y="111" width="80" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="0qJ-4N-ijj"/>
+                                    <constraint firstAttribute="height" constant="26" id="caU-Zw-bmU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="SWe-XD-CM6">
+                                <rect key="frame" x="101" y="111" width="60" height="60"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="SWe-XD-CM6" secondAttribute="height" multiplier="1:1" id="14N-Df-lOt"/>
+                                    <constraint firstAttribute="height" constant="60" id="DtL-5x-L0p"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="xRz-eT-FZu" appends="YES" id="o2Y-3L-Vfm"/>
+                                </connections>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="kEc-9M-o6A" secondAttribute="trailing" constant="10" id="1d7-Gu-bDu"/>
+                            <constraint firstItem="SWe-XD-CM6" firstAttribute="leading" secondItem="XdO-pr-WTQ" secondAttribute="trailing" constant="5" id="CIh-rI-qMu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7qx-vM-MbV" secondAttribute="trailing" id="FJE-eo-7A8"/>
+                            <constraint firstItem="XdO-pr-WTQ" firstAttribute="top" secondItem="7qx-vM-MbV" secondAttribute="bottom" constant="15" id="J3Q-pa-Ccb"/>
+                            <constraint firstItem="VU9-OX-1Qm" firstAttribute="top" secondItem="7qx-vM-MbV" secondAttribute="bottom" constant="15" id="KsR-Fw-52u"/>
+                            <constraint firstItem="7qx-vM-MbV" firstAttribute="leading" secondItem="q91-OI-JTL" secondAttribute="leadingMargin" id="RG1-Mh-L9K"/>
+                            <constraint firstItem="vAV-qA-0EM" firstAttribute="leading" secondItem="q91-OI-JTL" secondAttribute="leading" constant="50" id="SOa-Pj-R5g"/>
+                            <constraint firstItem="7qx-vM-MbV" firstAttribute="top" secondItem="g7X-6F-VaT" secondAttribute="bottom" constant="2" id="UCi-qz-tfQ"/>
+                            <constraint firstAttribute="bottom" secondItem="vAV-qA-0EM" secondAttribute="bottom" constant="20" id="agw-Fi-OgI"/>
+                            <constraint firstItem="vAV-qA-0EM" firstAttribute="centerX" secondItem="q91-OI-JTL" secondAttribute="centerX" id="bEj-UQ-A0j"/>
+                            <constraint firstItem="VU9-OX-1Qm" firstAttribute="trailing" secondItem="7qx-vM-MbV" secondAttribute="trailing" id="cCA-ov-Hw1"/>
+                            <constraint firstItem="kEc-9M-o6A" firstAttribute="leading" secondItem="q91-OI-JTL" secondAttribute="leading" constant="10" id="ngK-kt-JSx"/>
+                            <constraint firstItem="kEc-9M-o6A" firstAttribute="top" secondItem="SWe-XD-CM6" secondAttribute="bottom" constant="11" id="rGY-4U-RsW"/>
+                            <constraint firstItem="XdO-pr-WTQ" firstAttribute="leading" secondItem="7qx-vM-MbV" secondAttribute="leading" id="s3E-Vd-ipk"/>
+                            <constraint firstItem="SWe-XD-CM6" firstAttribute="top" secondItem="7qx-vM-MbV" secondAttribute="bottom" constant="15" id="yLY-3W-if4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imgV" destination="kEc-9M-o6A" id="gpN-Rj-rn6"/>
+                        <outlet property="logoImgView" destination="SWe-XD-CM6" id="dPI-DA-GeQ"/>
+                        <outlet property="textF" destination="7qx-vM-MbV" id="POv-h2-Waa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b6j-ZM-ne1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="xRz-eT-FZu">
+                    <connections>
+                        <action selector="chooseLogo:" destination="4U4-4g-bvX" id="8Df-av-OA7"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="888.79999999999995" y="-1023.2383808095952"/>
         </scene>
         <!--My View Controller-->
         <scene sceneID="vXp-br-qwG">
@@ -118,7 +234,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gbV-gZ-9JJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="166" y="511"/>
+            <point key="canvasLocation" x="-240" y="525"/>
         </scene>
         <!--Mall View Controller-->
         <scene sceneID="kbe-px-m4u">
@@ -146,7 +262,9 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" id="ODf-co-fpb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" red="1" green="0.037429042760000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.8351417544310854" green="0.89560592169999997" blue="0.19514113667137373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.6980247300924195" green="1" blue="0.97275099209066729" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="1" green="0.037429042760000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="Hng-sW-IBm" kind="relationship" relationship="viewControllers" id="hNt-hf-Wfz"/>
@@ -164,7 +282,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="B0C-eE-Efw" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="我的" image="item2_1" selectedImage="item2_1" id="z5Z-GF-361"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="6O1-je-54F">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="6O1-je-54F">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -217,6 +335,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="2" width="200" height="200"/>
         <image name="app_qrIcon" width="50" height="50"/>
         <image name="item0_1" width="30" height="30"/>
         <image name="item1_1" width="30" height="30"/>
